--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,6 +10,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Set env
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Test
+      run: |
+        echo $RELEASE_VERSION
+        echo ${{ env.RELEASE_VERSION }}
+
         
     - uses: actions/checkout@master
     - name: Archive Release
