--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,4 @@ jobs:
       with:
         artifacts: "한글lang.z2f"
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag: "v1.0.0"
